fix(docs): docgen spacing

--- a/src/components/docs-component/_docs-content.scss
+++ b/src/components/docs-component/_docs-content.scss
@@ -70,6 +70,10 @@
     margin: 1.6em 0;
   }
 
+  docgen-index + docgen-api {
+    margin-block-start: 64px;
+  }
+
   .ui-heading-1,
   .ui-heading-2,
   .ui-heading-3,
